Resolved alignment bug in resume cards in responsive mode

--- a/style.css
+++ b/style.css
@@ -665,18 +665,18 @@ hr {
   max-width: 500px;
   grid-column: 1/2;
   grid-row: 1/3;
-  justify-self: flex-end;
+  justify-self: center;
 }
 
 .right-card-1 {
   grid-column: 2/3;
   grid-row: 1/2;
-  justify-self: flex-start;
+  justify-self: center;
 }
 .right-card-2 {
   grid-column: 2/3;
   grid-row: 2/3;
-  justify-self: flex-start;
+  justify-self: center;
 }
 
 .resume-section .resume-skills p {
